Frontend: event-driven stage + idle/activity

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -59,6 +59,11 @@
           <div class="stage">
             <div class="stage-name" id="stageName">Idle</div>
             <div class="stage-detail" id="stageDetail">Waiting for a run…</div>
+            <div class="stage-meta">
+              <div class="meta-line">Latest event: <span id="substageEvent">—</span></div>
+              <div class="meta-line">Idle: <span id="idleInfo">—</span></div>
+              <div class="meta-line">Activity: <span id="activityInfo">—</span></div>
+            </div>
           </div>
           <div class="progress">
             <div id="progressBar" class="progress-bar"></div>
